vhost-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    cert-manager.io/issuer: ca-issuer 
spec:
  rules:
  - host: helloworld.local
    http:
      paths:
      - backend:
          serviceName: hellok8s-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - helloworld.local
    secretName: myingress-cert
